<resources>
    <item name="option_position" type="id"/>
    <item name="option_value" type="id"/>
    <string name="dialog_network_wait">请稍等</string>
    <string name="app_name">Vote</string>
    <string name="title_all_activity">投票系统</string>
    <string name="txt_home_first_label">—不洗碗工作室—</string>
    <string name="txt_home_second_label">—历史投票—</string>
    <string name="btn_home_login_current">投票活动</string>
    <string name="btn_home_login_past">参加过的活动</string>
    <string name="edit_hint_mobile">手机号</string>
    <string name="edit_hint_password">密码</string>
    <string name="txt_login_label">—不洗碗工作室—</string>
    <string name="txt_login_forget_password">忘记密码</string>
    <string name="edit_hint_new_password">新密码</string>
    <string name="btn_login">已有账号，立即登录</string>
    <string name="toast_net_has_question">网络出现问题,请稍后重新尝试</string>
    <string name="btn_register">未有账号，立即注册</string>
    <string name="edit_hint_verify">验证码</string>
    <string name="btn_get_verify">获取验证码</string>
    <string name="toast_not_input_verify">请输入验证码</string>
    <string name="btn_register_to_register">注册</string>
    <string name="txt_home_header_account">账号</string>
    <string name="toast_mobile_is_wrong">请输入正确的手机号</string>
    <string name="toast_password_is_wrong">请输入正确的密码</string>
    <string name="toast_register_is_success">注册成功</string>
    <string name="toast_mobile_password_is_empty">请输入手机号和密码</string>
    <string name="toast_verify_is_wrong">验证码错误</string>
    <string name="txt_home_vote_item_statue_end">已结束</string>
    <string name="toast_mobile_is_empty">请输入手机号</string>
    <string name="toast_user_not_exit">用户不存在</string>
    <string name="btn_bottom_back">返回查看更多投票</string>
    <string name="txt_vote_has_selected">请选择选项</string>
    <string name="btn_bottom_confirm_vote">确认投票</string>
    <string name="btn_bottom_share">分享投票</string>
    <string name="toast_password_error">密码错误</string>
    <string name="btn_bottom_confirm_rank">确认打分</string>
    <string name="txt_vote_vote_time">投票时间:</string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_txt_title">系统提示</string>
    <string name="dialog_message_content">确定要退出吗</string>
    <string name="txt_user_center_mobile">账号</string>
    <string name="txt_user_center_sex">性别</string>
    <string name="txt_user_center_modify_mobile">更改绑定手机</string>
    <string name="edit_modify_mobile_mobile">新手机号</string>
    <string name="btn_modify_mobile_to_modify">确认修改</string>
    <string name="txt_home_user_votes_label">—用户投票信息—</string>
    <string name="txt_vote_not_start">未开始</string>
    <string name="txt_vote_start">进行中</string>
    <string name="txt_vote_finish">已结束</string>
    <string name="toast_vote_records_submit_succsee">投票成功</string>
    <string name="toast_vote_records_has_voted">请勿重复投票</string>
    <string name="dialog_user_expire">用户过期，重新登录</string>
    <string name="dialog_user_need_to_login">您的账号在别处登录，请重新登录</string>
    <string name="toast_all_votes_must_to_score">还有未打分的投票</string>
    <string name="dialog_input_password">请输入密码</string>
    <string name="toast_modify_success">修改成功,请重新登录</string>
    <string name="btn_modify_password">修改密码</string>
    <string name="rbtn_sex_male">男</string>
    <string name="rbtn_sex_female">女</string>
    <string name="toast_change_sex_success">修改性别成功</string>
    <string name="txt_share_encode">生成二维码</string>
    <string name="txt_share_QQ">分享到QQ</string>
    <string name="txt_share_weixin">分享到微信</string>
</resources>
