<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.hrsoft.vote.account.activity.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/txt_label"
        android:layout_marginTop="@dimen/txt_label_below_toolbar_margin"
        android:text="@string/txt_login_label"/>
<net.hrsoft.vote.widget.CleanableEditText
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:layout_below="@id/txt_label"
    android:id="@+id/edit_mobile"
    android:layout_centerHorizontal="true"
    android:paddingLeft="5dp"
    android:background="@drawable/bg_edit_login_register"
    android:layout_marginTop="25dp"
    android:hint="@string/edit_hint_mobile"/>

    <net.hrsoft.vote.widget.CleanableEditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint_password"
        android:paddingLeft="5dp"
        android:textSize="20sp"
        android:background="@drawable/bg_edit_login_register"
        android:layout_marginTop="12dp"
        android:id="@+id/edit_password"
        android:layout_below="@+id/edit_mobile"
        android:layout_alignLeft="@+id/edit_mobile"
        android:layout_alignStart="@+id/edit_mobile"/>
    <TextView
        android:layout_below="@id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:id="@+id/txt_forget_password"
        android:text="@string/txt_login_forget_password"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:textColor="@color/text_btn_login"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/btn_login"
        android:layout_below="@+id/txt_forget_password"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        android:textColor="@color/text_btn_login"
        android:background="@drawable/bg_btn_login"
        android:text="@string/btn_register"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
