<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.hrsoft.vote.account.activity.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/txt_label"
        android:layout_marginTop="@dimen/txt_label_below_toolbar_margin"
        android:text="@string/txt_login_label"/>
    <net.hrsoft.vote.widget.CleanableEditText
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:layout_below="@id/txt_label"
        android:id="@+id/edit_register_mobile"
        android:layout_centerHorizontal="true"
        android:paddingLeft="5dp"
        android:background="@drawable/bg_edit_login_register"
        android:layout_marginTop="25dp"
        android:hint="@string/edit_hint_mobile"/>
    <net.hrsoft.vote.widget.CleanableEditText
        android:layout_width="200dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/edit_register_mobile"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint_verify"
        android:paddingLeft="5dp"
        android:textSize="20sp"
        android:background="@drawable/bg_edit_login_register"
        android:id="@+id/edit_register_verify"
        android:layout_alignLeft="@+id/edit_register_mobile"
        android:layout_alignBottom="@+id/btn_register_send_verify"/>

    <Button
        android:layout_width="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="12dp"
        android:layout_height="30dp"
        android:id="@+id/btn_register_send_verify"
        android:layout_below="@+id/edit_register_mobile"
        android:layout_toRightOf="@+id/edit_register_verify"
        android:layout_toEndOf="@+id/edit_register_verify"
        android:text="@string/btn_get_verify"
        android:background="@drawable/bg_edit_login_register"/>

    <net.hrsoft.vote.widget.CleanableEditText
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:paddingLeft="5dp"
        android:layout_alignLeft="@+id/edit_register_verify"
        android:background="@drawable/bg_edit_login_register"
        android:hint="@string/edit_hint_password"
        android:layout_below="@+id/edit_register_verify"
        android:id="@+id/edit_register_password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_register"
        android:text="@string/btn_register_to_register"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_login"
        android:layout_below="@id/edit_register_password"/>
</RelativeLayout>
