<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:weightSum="3"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:gravity="bottom|center"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:textSize="14sp"
        android:id="@+id/txt_encode_share"
        android:text="@string/txt_share_encode"
        android:drawableTop="@drawable/ic_encode"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="0dp"
        android:gravity="bottom|center"
        android:textSize="14sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/txt_share_QQ"
        android:layout_height="match_parent"
        android:id="@+id/txt_QQ_share"/>

    <TextView
        android:layout_width="0dp"
        android:text="@string/txt_share_weixin"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:textSize="14sp"
        android:gravity="bottom|center"
        android:layout_height="match_parent"
        android:id="@+id/txt_weixin_share"/>

</LinearLayout>