<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.hrsoft.vote.home.activity.UserCenterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/txt_label_below_toolbar_margin"
        android:layout_alignParentTop="true"
        android:id="@+id/txt_label_first"
        android:text="@string/txt_home_first_label"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:id="@+id/img_first_div"
        android:layout_below="@id/txt_label_first"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_marginLeft="5dp"
       android:layout_marginRight="5dp"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"
       android:layout_height="wrap_content"
       android:id="@+id/layout_user_center_account"
       android:weightSum="1"
       android:layout_below="@id/img_first_div">
       <TextView
           android:layout_width="0dp"
           android:layout_weight="0.5"
           android:textSize="15sp"
           android:layout_height="wrap_content"
           android:text="@string/txt_user_center_mobile"
           />
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="0.5"
           android:gravity="end"
           android:id="@+id/txt_user_center_mobile"/>
   </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/img_second_div"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        android:layout_below="@id/layout_user_center_account"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:id="@+id/layout_user_center_sex"
        android:weightSum="1"
        android:layout_below="@id/img_second_div">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/txt_user_center_sex"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="0.5"
            android:id="@+id/txt_user_center_sex"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        android:id="@+id/img_third_div"
        android:layout_below="@id/layout_user_center_sex"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/img_third_div"
        android:id="@+id/txt_user_center_change_mobile"
        android:layout_alignRight="@id/img_third_div"
        android:textColor="@color/colorPrimary"
        android:text="@string/txt_user_center_modify_mobile"
        />
</RelativeLayout>
